# raffle-selector

./: CMakeLists.txt  README.md
src/: datastorage.cpp  datastorage.h  main.cpp
src/ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
